# stockinfo/doc/swagger/stock_info.swagger.json
@@ -174,6 +174,30 @@
         ]
       }
     },
+    "/v1/user": {
+      "get": {
+        "summary": "Create new user",
+        "description": "Use this API to create new user",
+        "operationId": "StockInfo_GetUser",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/pbGetUserResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "tags": [
+          "StockInfo"
+        ]
+      }
+    },
     "/v1/verify_email": {
       "get": {
         "summary": "Verify email",
@@ -233,6 +257,14 @@
       }
     },
     "pbCreateUserResponse": {
+      "type": "object",
+      "properties": {
+        "user": {
+          "$ref": "#/definitions/pbUser"
+        }
+      }
+    },
+    "pbGetUserResponse": {
       "type": "object",
       "properties": {
         "user": {
@@ -315,6 +347,10 @@
     "pbUser": {
       "type": "object",
       "properties": {
+        "userId": {
+          "type": "string",
+          "format": "int64"
+        },
         "userName": {
           "type": "string"
         },
